# ray-tracing-leanguardia

./: CMakeLists.txt  Camera.cpp  Camera.h  Intersection.cpp  Intersection.h  Object.h  RGB.cpp  RGB.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Renderer.cp  Renderer.cpp  Renderer.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h  main.cpp
